--- a/index.html
+++ b/index.html
@@ -93,3 +93,31 @@
         </div>
       </div>
     </div>
+
+    <script>
+        function calcular(tipo,valor){ //declara se é do tipo valor ou uma ação, valor do caracter
+  
+          if(tipo === 'acao'){
+  
+            if(valor === 'c'){
+              document.getElementById('resultado').value = ''
+            }
+  
+            if(valor === '+' || valor === '-' || valor === '*' || valor === '/' || valor === '.'){
+              document.getElementById('resultado').value += valor 
+            }
+  
+            if (valor === '='){
+              var valor_campo = eval(document.getElementById('resultado').value)
+              document.getElementById('resultado').value = valor_campo
+            }
+  
+          }else if(tipo === 'valor'){
+  
+            document.getElementById('resultado').value += valor // concatenação do valor ja contido no campo com o valor que é recebido por parâmetro
+          }
+        }
+      </script>
+    </body>	
+  
+  </html>
